# src/modules/cars/useCases/listSpecifications/ListSpecificationsController.ts
@@ -1,16 +1,15 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { ListSpecificationsUseCase } from "./ListSpecificationsUseCase";
 
 class ListSpecificationsController {
-  private listSpecificationsUseCase: ListSpecificationsUseCase;
+  async handle(request: Request, response: Response): Promise<Response> {
+    const listSpecificationsUseCase = container.resolve(
+      ListSpecificationsUseCase
+    );
 
-  constructor(listSpecificationsUseCase: ListSpecificationsUseCase) {
-    this.listSpecificationsUseCase = listSpecificationsUseCase;
-  }
-
-  handle(request: Request, response: Response): Response {
-    const specifications = this.listSpecificationsUseCase.execute();
+    const specifications = await listSpecificationsUseCase.execute();
 
     return response.json(specifications);
   }
